# NeMo-Fabric

./: .coderabbit.yaml  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  CLI.md  CONTRIBUTING.md  Cargo.toml  POC-TO-MVP-PLAN.md  README.md  SECURITY.md  SWE-BENCH-RUN.md  TODO.md  justfile  pypi.md  pyproject.toml
.agents/skills/: README.md
.github/: CODEOWNERS  ci-path-filters.yml  pull_request_template.md
.github/workflows/: ci_check.yml  ci_python.yml  (+5 more)
adapters/: README.md
adapters/claude/: README.md  fabric-adapter.json  pyproject.toml  testing.md
adapters/claude/src/nemo_fabric_adapters/claude/: __init__.py  adapter.py
adapters/codex-cli/: README.md  fabric-adapter.json  pyproject.toml
adapters/codex-cli/src/nemo_fabric_adapters/codex_cli/: __init__.py  adapter.py
adapters/common/: README.md  pyproject.toml
adapters/common/src/nemo_fabric_adapters/common/: __init__.py  hermes.py  lifecycle.py  relay_gateway.py  relay_hooks.py  utils.py
adapters/deepagents/: README.md  fabric-adapter.json  pyproject.toml
adapters/deepagents/src/nemo_fabric_adapters/deepagents/: __init__.py  adapter.py
adapters/hermes/: README.md  fabric-adapter.json  pyproject.toml
adapters/hermes-cli/: README.md  fabric-adapter.json  pyproject.toml
adapters/hermes-cli/src/nemo_fabric_adapters/hermes_cli/: __init__.py  adapter.py
adapters/hermes-sdk/: README.md  fabric-adapter.json  pyproject.toml
adapters/hermes-sdk/src/nemo_fabric_adapters/hermes_sdk/: adapter.py
adapters/hermes/src/nemo_fabric_adapters/hermes/: adapter.py
crates/fabric-cli/: Cargo.toml  README.md
crates/fabric-cli/assets/adapters/claude/: fabric-adapter.json
crates/fabric-cli/assets/adapters/codex/: fabric-adapter.json
crates/fabric-cli/assets/adapters/deepagents/: fabric-adapter.json
crates/fabric-cli/assets/adapters/hermes/: fabric-adapter.json
crates/fabric-cli/assets/adapters/scripted/: fabric-adapter.json  run.py
crates/fabric-cli/assets/examples/code-review/repo/: calculator.py
crates/fabric-cli/assets/examples/code-review/skills/: code-review.md
crates/fabric-cli/src/: app.rs  assets.rs  examples.rs  lib.rs  main.rs  presets.rs  scaffold.rs
crates/fabric-cli/templates/: README.md.tmpl
crates/fabric-cli/templates/python/: main.py.tmpl  pyproject.toml.tmpl
crates/fabric-cli/templates/rust/: Cargo.toml.tmpl  main.rs.tmpl
crates/fabric-core/: Cargo.toml  README.md
crates/fabric-core/examples/: generate-schemas.rs
crates/fabric-core/src/: config.rs  doctor.rs  error.rs  lib.rs  runtime.rs  schema.rs
crates/fabric-python/: Cargo.toml
crates/fabric-python/src/: lib.rs
docs/: README.md  fabric-adapter-gap-aalgo-277.md  index.yml  overview.mdx  package-lock.json  package.json  python-sdk-contract.md  sdk-contract.md
examples/: README.md  __init__.py  session_quickstart.py
fern/: README.md  docs.yml
python/: README.md  pyproject.toml
python/src/nemo_fabric/: __init__.py  _config_sources.py  _native.pyi  cli.py  client.py  errors.py  factories.py  models.py  presets.py  runtime.py  session.py  streaming.py  types.py
python/src/nemo_fabric/_bundled/adapters/claude/: fabric-adapter.json
python/src/nemo_fabric/_bundled/adapters/codex/: fabric-adapter.json
python/src/nemo_fabric/_bundled/adapters/deepagents/: fabric-adapter.json
python/src/nemo_fabric/_bundled/adapters/hermes/: fabric-adapter.json
python/src/nemo_fabric/_bundled/examples/code_review_agent/: README.md  __init__.py  config.py
python/src/nemo_fabric/_bundled/examples/code_review_agent/adapters/scripted/: fabric-adapter.json  run.py
python/src/nemo_fabric/_bundled/examples/code_review_agent/skills/: code-review.md
python/src/nemo_fabric/adapters/codex-cli/src/nemo_fabric_adapters/codex_cli/: adapter.py
python/src/nemo_fabric/adapters/hermes-cli/src/nemo_fabric_adapters/hermes_cli/: __init__.py
python/src/nemo_fabric/adapters/hermes-sdk/: README.md
python/src/nemo_fabric/integrations/: __init__.py  harbor.py
python/src/nemo_fabric/integrations/harbor/: README.md  __init__.py  fabric_agent.py  models.py  runner.py  telemetry.py  verify_telemetry.py
python/tests/: smoke_cli_overrides.py  smoke_consumer_neutral.py  smoke_environment_handle.py  smoke_harbor_integration.py  smoke_native_sdk.py  smoke_readme_examples.py  smoke_sdk.py  smoke_sdk_concurrency.py  smoke_sdk_runtimes.py  smoke_sdk_sessions.py  smoke_typed_config.py
schemas/: SCHEMA.md  adapter-descriptor.schema.json  adapter-invocation.schema.json  adapter-lifecycle-request.schema.json  adapter-lifecycle-response.schema.json  agent.schema.json  artifact-manifest.schema.json  effective-config.schema.json  environment-handle.schema.json  error-info.schema.json  fabric-event.schema.json  invocation-handle.schema.json  profile.schema.json  run-plan.schema.json  run-request.schema.json  run-result.schema.json  runtime-context.schema.json  runtime-handle.schema.json  session-handle.schema.json  started-session.schema.json
scripts/: generate_api_docs.sh  generate_attributions.sh
skills/: README.md
streaming-poc/: .gitignore  README.md  implementation-spec.md  two-turn-isolation.jsonl
tests/: conftest.py  smoke_acceptance_criteria_qwen.py  smoke_agent_evaluator_qwen.py  smoke_cli.py  smoke_codex_cli.py  smoke_harbor_swebench_task.py  smoke_hermes_capability_hardening.py  smoke_hermes_cli.py  smoke_hermes_config_mapping.py  smoke_hermes_real.py  smoke_hermes_runtime.py  smoke_hermes_sdk.py  smoke_hermes_sdk_history.py  smoke_hermes_session.py  smoke_langchain_react_atif_qwen.py  smoke_langchain_react_qwen.py  smoke_local_env_e2e.py  smoke_relay_integration.py  smoke_swebench_style.py  test_adapaters_common_hermes.py  test_adapaters_common_utils.py  test_adapaters_hermes_common.py  test_codex_cli.py  test_harbor_runner.py  test_hermes_cli.py  test_hermes_cli_fields.py  test_hermes_cli_preflight.py  test_hermes_e2e.py  test_hermes_sdk_adapter.py  test_langchain_react_adapter.py  test_python_api_docs.py  test_runtime.py  test_sdk_contract.py  test_session.py
(+702 files in other folders)
