[workspace]
members = [
    "crates/fabric-core",
    "crates/fabric-cli",
    "crates/fabric-python",
]
default-members = [
    "crates/fabric-core",
    "crates/fabric-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/NVIDIA/nemo-fabric"

[workspace.dependencies]
fabric-core = { path = "crates/fabric-core", version = "0.1.0" }

clap = { version = "4", features = ["derive"] }
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
pyo3 = "0.28.2"

[workspace.lints.rust]
missing_docs = "warn"
