# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = [
  "setuptools>=77",
]
build-backend = "setuptools.build_meta"

[project]
name = "nemo-fabric"
version = "0.1.0"
description = "Python SDK distribution for NeMo Fabric"
authors = [
  { name = "NVIDIA Corporation" },
]
keywords = ["agents", "ai", "nemo-fabric", "runtime", "tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Repository = "https://github.com/NVIDIA/nemo-fabric/"
Documentation = "https://nvidia-nemo-fabric.docs.buildwithfern.com/nemo/fabric"

[tool.setuptools]
packages = []

[project.optional-dependencies]
adapters-common = [
  "nemo-fabric-adapters-common == 0.1.0",
]

adapters-codex-cli = [
  "nemo-fabric-adapters-codex-cli == 0.1.0",
]

adapters-claude = [
  "nemo-fabric-adapters-claude == 0.1.0",
]

adapters-deepagents = [
  "nemo-fabric-adapters-deepagents == 0.1.0",
]

adapters-hermes = [
  "nemo-fabric-adapters-hermes == 0.1.0; python_version < '3.14'",
]

codex = [
  "nemo-fabric-adapters-codex-cli == 0.1.0",
]

claude = [
  "nemo-fabric-adapters-claude == 0.1.0",
]

deepagents = [
  "nemo-fabric-adapters-deepagents == 0.1.0",
]

harbor = [
  "harbor>=0.16.1; python_version >= '3.12'",
  "pyyaml>=6.0",
]

hermes = [
  "nemo-fabric-adapters-hermes == 0.1.0; python_version < '3.14'",
  "hermes-agent>=0.17.0; python_version < '3.14'",
]

relay = [
  "nemo-relay~=0.5.0",
  "tomli-w~=1.2", # Needed by adapters to write relay config files
]

runtime = [
  "nemo-fabric-runtime == 0.1.0",
]

[dependency-groups]
adapters = [
  "nemo-fabric-adapters-common",
  "nemo-fabric-adapters-claude",
  "nemo-fabric-adapters-codex-cli",
  "nemo-fabric-adapters-deepagents",
  "nemo-fabric-adapters-hermes; python_version < '3.14'",
]

dev = [
    "ipython~=8.20",
    "pip-licenses>=5,<6",
    "pkginfo~=1.12",
    "pre-commit~=4.0",
    "requests~=2.32",
]

docs = [
  "lazydocs>=0.4",
  "beautifulsoup4>=4.12",
]

test = [
    "fastapi~=0.138",
    "pytest>=8",
    "pytest-asyncio>=0.26",
    "pytest-cov~=7.0",
    "pyyaml>=6.0",
    "tomli-w~=1.2",
    "uvicorn~=0.49",
]

[tool.uv]
default-groups = ["adapters", "dev", "test"]

[tool.uv.sources]
nemo-fabric-runtime = { path = "python", editable = true }
nemo-fabric-adapters-common = { path = "adapters/common", editable = true }
nemo-fabric-adapters-claude = { path = "adapters/claude", editable = true }
nemo-fabric-adapters-codex-cli = { path = "adapters/codex-cli", editable = true }
nemo-fabric-adapters-deepagents = { path = "adapters/deepagents", editable = true }
nemo-fabric-adapters-hermes = { path = "adapters/hermes", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff.lint]
# flake8-bugbear: enforce only the cached-instance-method rule (B019).
# Using functools.lru_cache/cache on methods keeps a reference to `self` in
# the cache, leaking every instance for the process lifetime. The full "B"
# category is intentionally not enabled to avoid noisy, low-value warnings.
select = ["B019"]
