# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = [
  "setuptools>=77",
]
build-backend = "setuptools.build_meta"

[project]
name = "nemo-fabric-adapters-codex-cli"
version = "0.1.0"
description = "Codex CLI adapter for NeMo Fabric"
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "nemo-fabric-adapters-common == 0.1.0",
  "tomli-w~=1.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["nemo_fabric_adapters.codex_cli*"]

[tool.setuptools.data-files]
"share/nemo-fabric/adapters/codex-cli" = ["fabric-adapter.json"]

[tool.uv.sources]
nemo-fabric-adapters-common = { path = "../common", editable = true }
