# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = [
  "setuptools>=77",
]
build-backend = "setuptools.build_meta"

[project]
name = "nemo-fabric-adapters-common"
version = "0.1.0"
description = "Shared Python helpers for NeMo Fabric adapters"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nemo_fabric_adapters.common*"]
