# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = [
  "setuptools>=64",
]
build-backend = "setuptools.build_meta"

[project]
name = "nemo-fabric-adapters-deepagents"
version = "0.1.0"
description = "LangChain Deep Agents adapter for NeMo Fabric"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "nemo-fabric-adapters-common == 0.1.0",
  "deepagents>=0.5.3,<0.6.0",
  "langchain>=1.3,<2.0",
  "langchain-mcp-adapters>=0.1,<0.3.0",
  "langchain-openai>=0.3",
  "langgraph>=1.2,<2.0",
  # Requires 3.x: the 2.x line is incompatible with the langgraph core deepagents
  # pulls (AsyncSqliteSaver fails with 'Connection has no attribute is_alive').
  "langgraph-checkpoint-sqlite>=3.0,<4.0",
  "nemo-relay~=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["nemo_fabric_adapters.deepagents*"]

[tool.setuptools.data-files]
"share/nemo-fabric/adapters/deepagents" = ["fabric-adapter.json"]

[tool.uv.sources]
nemo-fabric-adapters-common = { path = "../common", editable = true }
