# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = [
  "setuptools>=77",
]
build-backend = "setuptools.build_meta"

[project]
name = "nemo-fabric-adapters-hermes"
version = "0.1.0"
description = "Hermes Agent adapter for NeMo Fabric"
authors = [
  { name = "NVIDIA Corporation" },
]
keywords = ["agents", "ai", "nemo-fabric", "runtime", "tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
# Hermes Agent does not currently support Python 3.14 or later.
requires-python = ">=3.11,<3.14"
dependencies = [
  "nemo-fabric-adapters-common == 0.1.0",
  "pyyaml>=6.0", # needed for writing hermes config files
]

[project.urls]
Repository = "https://github.com/NVIDIA/nemo-fabric/"
Documentation = "https://nvidia-nemo-fabric.docs.buildwithfern.com/nemo/fabric"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nemo_fabric_adapters.hermes*"]

[tool.setuptools.data-files]
"share/nemo-fabric/adapters/hermes" = ["fabric-adapter.json"]

[tool.uv.sources]
nemo-fabric-adapters-common = { path = "../common", editable = true }
