# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-fabric-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Experimentation CLI for NeMo Fabric."
readme = "README.md"

[[bin]]
name = "nemo-fabric"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap.workspace = true
nemo-fabric-core.workspace = true
serde_json.workspace = true
