[package]
name = "fabric-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core config and runtime contract for NeMo Fabric."

[lints]
workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
