# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fabric-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core config and runtime contract for NeMo Fabric."

[lints]
workspace = true

[dependencies]
process_path.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
